objects/Ownership__c.object
<CustomObject>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Dealership</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ownerships (Dealer)</relationshipLabel>
        <relationshipName>Ownerships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fleet_Lease_Owner__c</fullName>
        <label>Fleet / Lease Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleet_Lease_Ownership__c</fullName>
        <label>Fleet / Lease Ownership</label>
        <picklist>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insurance_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurance Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ownerships (Insurance Company)</relationshipLabel>
        <relationshipName>Ownerships2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Point_Date__c</fullName>
        <label>Last Touch Point Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Point_From__c</fullName>
        <label>Last Touch Point From</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership_Start__c</fullName>
        <label>Ownership Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ownership_Status__c</fullName>
        <label>Ownership Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unconfirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registered_Owner_Name__c</fullName>
        <formula>Registered_Owner__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registered Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registered Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ownerships</relationshipLabel>
        <relationshipName>Ownerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Make__c</fullName>
        <formula>Vehicle__r.Vehicle_Make__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Make</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <formula>Vehicle__r.Vehicle_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Plate__c</fullName>
        <formula>Vehicle__r.Registration_Plate_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Plate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Year__c</fullName>
        <formula>Vehicle__r.Year_Made__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Ownerships</relationshipLabel>
        <relationshipName>Ownerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Ownership</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Ownership_Start__c</columns>
        <columns>Ownership_Status__c</columns>
        <columns>Registered_Owner__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Vehicle_Plate__c</columns>
        <columns>Fleet_Lease_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>O-{00000000}</displayFormat>
        <label>Ownership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ownerships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>